# BookProject

./: .gitignore  Book.cpp  CMakeLists.txt  Date.cpp  Date.hpp  Isbn.cpp  ProgettoBook.md  README.md  main.cpp
BookProject/: Book.cpp  Book.hpp  BookProject.mk  BookProject.project  Date.cpp  Date.hpp  Isbn.cpp  Isbn.hpp  compile_flags.txt  main.cpp
BookProject_old/: CMakeLists.txt  README.md
BookProject_old/Headers/: Book.hpp
BookProject_old/Source/: Date.cpp  Isbn.cpp
Headers/: Book.h  Book.hpp  Date.h  Date.hpp  Isbn.h  Isbn.hpp
ProgettoBook-20221118T102753Z-001/ProgettoBook/: Isbn.hpp  main.cpp
Source/: Book.cpp  Date.cpp  Isbn.cpp
